MQonCP4I/nativeha/deploy/nativeha.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mq01ha-mq01hachl-ibm-mq-qm
  namespace: cp4i-mq
spec:
  host: mq01hachl.chl.mq.ibm.com
  to:
    kind: Service
    name: mq01ha-ibm-mq
  port:
    targetPort: 1414
  tls:
    termination: passthrough
  wildcardPolicy: None
