MQonCP4I/nativeha/deploy/recovery-template.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ${QMname}-${CHANNEL}-ibm-mq-qm
  namespace: $TARGET_NAMESPACE
spec:
  host: ${CHANNEL}.chl.mq.ibm.com
  to:
    kind: Service
    name: ${QMname}-ibm-mq
  port:
    targetPort: 1414
  tls:
    termination: passthrough
  wildcardPolicy: None
